# fps

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  precompiled.h
src/importers/: ModelImporterOBJ.cpp  ModelImporterOBJ.h  packedVertex.h
src/interfaces/: vertexshader_iface.h
src/math/: clipping.h  intersection.h  line.h  matrix.h  plane.h  triangle.h  utils.h  vector.h
src/rendering/: color.h  fps_camera.h  master_renderer.cpp  master_renderer.h  model.h  renderbuffer.cpp  renderbuffer.h  utils.cpp  utils.h
src/shaders/: model_vertexshader.cpp  model_vertexshader.h
src/test/: line_test.cpp  matrix_test.cpp  plane_test.cpp  triangle_test.cpp  vector_test.cpp
